minimum de caractère

--- a/admin.html
+++ b/admin.html
@@ -49,10 +49,10 @@
                     <form id="password-form">
                         <div class="mb-3">
                             <label class="form-label">Nouveau mot de passe</label>
-                            <input type="password" id="new-password" class="form-control bg-dark text-white" placeholder="Au moins 8 caractères" required>
+                            <input type="password" id="new-password" class="form-control bg-dark text-white" placeholder="10+ caractères, min/maj/chiffre/symbole" required>
                         </div>
                         <button type="submit" class="btn btn-outline-warning w-100" id="password-btn">Changer le mot de passe</button>
-                        <div class="form-text text-secondary mt-2">Tu restes connecté. Pense à noter ton nouveau mot de passe.</div>
+                        <div class="form-text text-secondary mt-2">10 caractères minimum avec au moins 1 minuscule, 1 majuscule, 1 chiffre et 1 symbole.</div>
                     </form>
 
                     <div class="d-flex gap-2">
