--- a/admin.html
+++ b/admin.html
@@ -49,7 +49,10 @@
                     <form id="password-form">
                         <div class="mb-3">
                             <label class="form-label">Nouveau mot de passe</label>
-                            <input type="password" id="new-password" class="form-control bg-dark text-white" placeholder="10+ caractères, min/maj/chiffre/symbole" required>
+                            <div class="input-group">
+                                <input type="password" id="new-password" class="form-control bg-dark text-white" placeholder="10+ caractères, min/maj/chiffre/symbole" required>
+                                <button type="button" class="btn btn-outline-secondary" id="toggle-password">Afficher</button>
+                            </div>
                         </div>
                         <button type="submit" class="btn btn-outline-warning w-100" id="password-btn">Changer le mot de passe</button>
                         <div class="form-text text-secondary mt-2">10 caractères minimum avec au moins 1 minuscule, 1 majuscule, 1 chiffre et 1 symbole.</div>
@@ -83,6 +86,7 @@
     const uploadBtn = document.getElementById('upload-btn')
     const passwordForm = document.getElementById('password-form')
     const passwordBtn = document.getElementById('password-btn')
+    const togglePasswordBtn = document.getElementById('toggle-password')
     const refreshBtn = document.getElementById('refresh-btn')
 
     function showAdminError(message) {
@@ -216,6 +220,13 @@
             passwordBtn.disabled = false
             passwordBtn.textContent = 'Changer le mot de passe'
         }
+    })
+
+    togglePasswordBtn.addEventListener('click', () => {
+        const input = document.getElementById('new-password')
+        const isHidden = input.type === 'password'
+        input.type = isHidden ? 'text' : 'password'
+        togglePasswordBtn.textContent = isHidden ? 'Masquer' : 'Afficher'
     })
 
     refreshBtn.addEventListener('click', async () => {
